problem-1 Added functional ProblemProcessor with passing tests. DONE